test_errors_fixed.txt
    Checking cfg-if v1.0.4
   Compiling serde_core v1.0.228
    Checking typenum v1.19.0
   Compiling memchr v2.8.0
   Compiling zmij v1.0.21
   Compiling itoa v1.0.17
    Checking zeroize v1.8.2
    Checking subtle v2.6.1
    Checking const-oid v0.9.6
    Checking getrandom v0.2.17
    Checking zerocopy v0.8.39
   Compiling semver v1.0.27
    Checking num-traits v0.2.19
    Checking rand_core v0.6.4
   Compiling thiserror v1.0.69
    Checking once_cell v1.21.3
   Compiling rustc_version v0.4.1
    Checking generic-array v0.14.9
   Compiling data-encoding v2.10.0
   Compiling escape-bytes v0.1.1
    Checking ff v0.13.1
    Checking der v0.7.10
    Checking base16ct v0.2.0
    Checking num-integer v0.1.46
    Checking group v0.13.0
    Checking num-bigint v0.4.6
    Checking crypto-common v0.1.6
    Checking block-buffer v0.10.4
    Checking digest v0.10.7
    Checking crypto-bigint v0.5.5
    Checking sec1 v0.7.3
    Checking signature v2.2.0
    Checking either v1.15.0
    Checking cpufeatures v0.2.17
    Checking hmac v0.12.1
    Checking itertools v0.10.5
    Checking rfc6979 v0.4.0
    Checking sha2 v0.10.9
    Checking libm v0.2.16
   Compiling curve25519-dalek v4.1.3
   Compiling serde v1.0.228
   Compiling serde_json v1.0.149
   Compiling serde_with v3.16.1
    Checking elliptic-curve v0.13.8
    Checking downcast-rs v1.2.1
    Checking hashbrown v0.16.1
   Compiling hex v0.4.3
   Compiling equivalent v1.0.2
    Checking indexmap-nostd v0.4.0
   Compiling crate-git-revision v0.0.6
    Checking indexmap v2.13.0
    Checking wasmparser-nostd v0.100.2
    Checking wasmi_core v0.13.0
    Checking ppv-lite86 v0.2.21
   Compiling stellar-strkey v0.0.9
   Compiling stellar-xdr v22.1.0
    Checking ahash v0.8.12
    Checking rand_chacha v0.3.1
    Checking hashbrown v0.13.2
    Checking rand v0.8.5
   Compiling soroban-env-common v22.1.3
    Checking ecdsa v0.16.9
    Checking arbitrary v1.3.2
    Checking base64 v0.13.1
    Checking spin v0.9.8
    Checking smallvec v1.15.1
    Checking ark-std v0.4.0
    Checking wasmi_arena v0.4.1
    Checking ark-serialize v0.4.2
    Checking wasmparser v0.116.1
    Checking ark-ff v0.4.2
    Checking getrandom v0.3.4
    Checking primeorder v0.13.6
    Checking soroban-wasmi v0.31.1-soroban.20.0.1
    Checking ed25519 v2.2.3
    Checking ethnum v1.5.2
    Checking keccak v0.1.6
    Checking static_assertions v1.1.0
    Checking sha3 v0.10.8
    Checking ed25519-dalek v2.2.0
    Checking p256 v0.13.2
    Checking rand_core v0.9.5
    Checking k256 v0.13.4
   Compiling soroban-sdk-macros v22.0.10
    Checking windows-link v0.2.1
    Checking hex-literal v0.4.1
    Checking windows-sys v0.61.2
    Checking getrandom v0.4.1
   Compiling soroban-sdk v22.0.10
    Checking fastrand v2.3.0
    Checking fnv v1.0.7
    Checking bit-vec v0.8.0
    Checking quick-error v1.2.3
    Checking wait-timeout v0.2.1
    Checking rand v0.9.2
    Checking bit-set v0.8.0
    Checking tempfile v3.25.0
    Checking rand_xorshift v0.4.0
    Checking rand_chacha v0.9.0
    Checking regex-syntax v0.8.9
    Checking rusty-fork v0.3.1
    Checking ark-poly v0.4.2
    Checking bitflags v2.11.0
    Checking unarray v0.1.4
    Checking ark-ec v0.4.2
    Checking proptest v1.10.0
    Checking ark-bls12-381 v0.4.0
   Compiling soroban-spec v22.0.10
   Compiling soroban-spec-rust v22.0.10
   Compiling soroban-env-macros v22.1.3
    Checking soroban-env-host v22.1.3
    Checking soroban-ledger-snapshot v22.0.10
    Checking vision_records v1.2.2 (C:\Users\odeye\Desktop\My Projects\OpensrcIssues\Teye-Contracts\contracts\vision_records)
    Checking cross_chain v1.2.2 (C:\Users\odeye\Desktop\My Projects\OpensrcIssues\Teye-Contracts\contracts\cross_chain)
warning: unused import: `Vec`
 --> contracts\cross_chain\src\lib.rs:6:94
  |
6 |     contract, contractimpl, contracttype, symbol_short, Address, Bytes, Env, String, Symbol, Vec,
  |                                                                                              ^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `CrossChainMessage`
 --> contracts\cross_chain\src\test.rs:3:59
  |
3 | use crate::{CrossChainContract, CrossChainContractClient, CrossChainMessage};
  |                                                           ^^^^^^^^^^^^^^^^^

warning: unused imports: `Bytes` and `symbol_short`
 --> contracts\cross_chain\src\test.rs:4:19
  |
4 | use soroban_sdk::{symbol_short, testutils::Address as _, Address, Bytes, Env, String};
  |                   ^^^^^^^^^^^^                                    ^^^^^

error[E0277]: the trait bound `(): From<soroban_sdk::Error>` is not satisfied
   --> contracts\cross_chain\src\lib.rs:26:1
    |
 26 | #[contractimpl]
    | ^^^^^^^^^^^^^^^ the trait `From<soroban_sdk::Error>` is not implemented for `()`
    |
help: the trait `From<soroban_sdk::Error>` is not implemented for `()`
      but trait `From<soroban_sdk::xdr::Error>` is implemented for it
   --> C:\Users\odeye\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\stellar-xdr-22.1.0\src\curr\generated.rs:221:1
    |
221 | impl From<Error> for () {
    | ^^^^^^^^^^^^^^^^^^^^^^^
    = help: for that trait implementation, expected `soroban_sdk::xdr::Error`, found `soroban_sdk::Error`
    = note: required for `soroban_sdk::Error` to implement `Into<()>`
    = note: required for `()` to implement `TryFrom<soroban_sdk::Error>`
    = note: this error originates in the attribute macro `soroban_sdk::contractclient` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `for<'a> soroban_sdk::Error: From<&'a ()>` is not satisfied
  --> contracts\cross_chain\src\lib.rs:26:1
   |
26 | #[contractimpl]
   | ^^^^^^^^^^^^^^^ the trait `for<'a> From<&'a ()>` is not implemented for `soroban_sdk::Error`
   |
   = help: the following other types implement trait `From<T>`:
             `soroban_sdk::Error` implements `From<&soroban_sdk::Error>`
             `soroban_sdk::Error` implements `From<(soroban_sdk::xdr::ScErrorType, soroban_sdk::xdr::ScErrorCode)>`
             `soroban_sdk::Error` implements `From<Infallible>`
             `soroban_sdk::Error` implements `From<soroban_env_common::symbol::SymbolError>`
             `soroban_sdk::Error` implements `From<soroban_env_host::builtin_contracts::contract_error::ContractError>`
             `soroban_sdk::Error` implements `From<soroban_sdk::ConversionError>`
             `soroban_sdk::Error` implements `From<soroban_sdk::xdr::Error>`
             `soroban_sdk::Error` implements `From<soroban_sdk::xdr::ScError>`
           and 4 others
   = note: required for `&'a ()` to implement `for<'a> Into<soroban_sdk::Error>`
   = note: required for `soroban_sdk::Error` to implement `for<'a> TryFrom<&'a ()>`
   = note: required for `soroban_sdk::Val` to implement `TryFromVal<Env, core::result::Result<(), ()>>`
   = note: required for `soroban_sdk::Val` to implement `FromVal<Env, core::result::Result<(), ()>>`
   = note: required for `core::result::Result<(), ()>` to implement `IntoVal<Env, soroban_sdk::Val>`
   = note: this error originates in the attribute macro `contractimpl` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
 --> contracts\cross_chain\src\test.rs:9:27
  |
9 |     let contract_id = env.register_contract(None, CrossChainContract);
  |                           ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(deprecated)]` on by default

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
  --> contracts\cross_chain\src\test.rs:23:27
   |
23 |     let contract_id = env.register_contract(None, CrossChainContract);
   |                           ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
  --> contracts\cross_chain\src\test.rs:44:27
   |
44 |     let contract_id = env.register_contract(None, CrossChainContract);
   |                           ^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `cross_chain` (lib test) generated 6 warnings
error: could not compile `cross_chain` (lib test) due to 8 previous errors; 6 warnings emitted
